# nlp-common

./: CMakeLists.txt  README.md  bow.cpp  bow.h  dict.cpp  dict.h  document.h  featurizer.h  main.cpp  rule.cpp  rule.h  tokenizer.cpp  tokenizer.h
ad/: ad.h  operators.cpp  operators.h  var.cpp  var.h
autodiff/: CMakeLists.txt
autodiff/examples/: CMakeLists.txt  linear_regression.cpp
autodiff/src/: CMakeLists.txt
autodiff/src/ad/: ad.h  graph.cpp  graph.h  hashtable.cpp  hashtable.h  helpers.cpp  helpers.h  initializers.cpp  initializers.cu  initializers.h  matrix.cu  matrix.h  nn.cpp  nn.h  operators.cpp  operators.cu  operators.h  rwmatrix.h  trainers.h
autodiff/src/ad/cuda/: gpu_chunks_pool.cpp  gpu_chunks_pool.h  helpers.cu  helpers.h
autodiff/src/ad/kernels/: adagrad.cu  adam.cu  identity.cu  kernels.h  kernels.h~  log.cu  relu.cu  tanh.cu
autodiff/src/ad/nn/: fullyconn.cpp  fullyconn.h  gru.cpp  gru.h  highway-layer.cpp  highway-layer.h  input-layer.h  lstm.cpp  lstm.h  mrnn.cpp  mrnn.h  neural-output.h  rnn-encoder.cpp  rnn-encoder.h  rnn.cpp  rnn.h  rnn1.cpp  rnn1.h  rnn2.cpp  rnn2.h  scrn.h
autodiff/src/ad/optimizers/: adadelta.cpp  adadelta.cu  adadelta.h  adagrad.cpp  adagrad.cu  adagrad.h  adam.cpp  adam.cu  adam.h  minibatch.h  momentum.cpp  momentum.h  sgd.cu  sgd.h
src/: CMakeLists.txt  bow.cpp  bow.h
src/ad/: operators.cpp
src/nlp/: autoencoder-bidir.h  autoencoder-w-bidir.h  autoencoder.h  bow.cpp  bow.h  conversation-layered.h  conversation-mrnn.h  conversation.h  dict.cpp  dict.h  document.h  sequence-classifier.cpp  sequence-classifier.h  sequence-tagger.cpp  sequence-tagger.h  tokenizer.cpp  tokenizer.h  utils.cpp  utils.h
tests/: CMakeLists.txt  bow-classifier.cpp  convers.cpp  encoder.cpp  parallel-convers.cpp  pos-tagger.cpp  seq-classifier.cpp  tests.cpp
